# local_slm_experiments

./: README.md  benchmark_app.py  main.py  model_comparison_study.py  model_downloads.py  pyproject.toml  test_simple.py  visualize_results.py
results/: detailed_llama3.2_latest_20260310_165415.json  detailed_mistral_7b_20260310_164455.json  detailed_mistral_7b_20260310_165415.json  detailed_phi3_mini_20260310_165415.json  model_comparison_3_models.json
results/charts/: ranking_summary.csv
