[project]
name = "local-slm-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]
